--- a/TrackFit/TrackFit Project/MainWindow.xaml
+++ b/TrackFit/TrackFit Project/MainWindow.xaml
@@ -2,17 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="TrackFit" Height="453.635" Width="855.207">
-    <Grid>
-        <TabControl HorizontalAlignment="Left" Height="403" Margin="10,10,0,0" VerticalAlignment="Top" Width="827">
-            <TabItem Header="Exercise">
-                <Grid Background="#FFE5E5E5"/>
-            </TabItem>
-            <TabItem Header="Nutrition">
-                <Grid Background="#FFE5E5E5"/>
-            </TabItem>
-            <TabItem Header="Statistics">
-                <Grid Background="#FFE5E5E5"/>
-            </TabItem>
-        </TabControl>
-    </Grid>
+    <Frame x:Name="Main_Window_Frame">
+        
+    </Frame>
+
 </Window>
