--- a/TrackFit/TrackFit Project/Login Page.xaml
+++ b/TrackFit/TrackFit Project/Login Page.xaml
@@ -10,13 +10,13 @@
       ShowsNavigationUI = "false" >
 
     <Grid Background="#FFE5E5E5">
-        <TextBox HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Margin="338,194,0,0"/>
-        <TextBox HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" Margin="338,222,0,0"/>
-        <TextBlock HorizontalAlignment="Left" Margin="265,195,0,0" TextWrapping="Wrap" Text="User Name:" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="265,223,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Pas"/><Run Text="sword:"/></TextBlock>
-        <Button Content="Login" HorizontalAlignment="Left" Margin="361,250,0,0" VerticalAlignment="Top" Width="86"/>
-        <TextBlock HorizontalAlignment="Left" Margin="338,64,0,0" TextWrapping="Wrap" Text="TrackFit" VerticalAlignment="Top" Width="137" Height="66" FontSize="36" FontWeight="Bold"/>
-        <Button Content="Create Account" HorizontalAlignment="Left" Margin="361,275,0,0" VerticalAlignment="Top" Width="86"/>
+        <TextBox x:Name="User_Name_Text_Box" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="137" Margin="338,194,0,0"/>
+        <TextBox x:Name="Password_Text_Box" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="137" Margin="338,222,0,0"/>
+        <TextBlock x:Name="User_Name_Label" HorizontalAlignment="Left" Margin="265,195,0,0" TextWrapping="Wrap" Text="User Name:" VerticalAlignment="Top"/>
+        <TextBlock x:Name="Password_Label" HorizontalAlignment="Left" Margin="265,223,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Pas"/><Run Text="sword:"/></TextBlock>
+        <Button x:Name="Login_Button" Content="Login" HorizontalAlignment="Left" Margin="361,250,0,0" VerticalAlignment="Top" Width="86"/>
+        <TextBlock x:Name="Title" HorizontalAlignment="Left" Margin="338,64,0,0" TextWrapping="Wrap" Text="TrackFit" VerticalAlignment="Top" Width="137" Height="66" FontSize="36" FontWeight="Bold"/>
+        <Button x:Name="Create_Account_Button" Content="Create Account" HorizontalAlignment="Left" Margin="361,275,0,0" VerticalAlignment="Top" Width="86"/>
 
     </Grid>
 </Page>
