--- a/TrackFit/TrackFit Project/MainWindow.xaml
+++ b/TrackFit/TrackFit Project/MainWindow.xaml
@@ -1,7 +1,6 @@
 ﻿<Window x:Class="TrackFit_Project.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="TrackFit" Height="453.635" Width="855.207">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Height="453.635" Width="855.207" Title="TrackFit">
     <Frame x:Name="Main_Window_Frame">
         
     </Frame>
