--- a/TrackFit/TrackFit Project/Main Page.xaml
+++ b/TrackFit/TrackFit Project/Main Page.xaml
@@ -22,6 +22,9 @@
                     <TextBlock HorizontalAlignment="Left" Height="234" Margin="169,87,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="548"/>
                     <Button x:Name="Exercise_tab_left_button" Content="&lt;" Margin="148,189,652,154" FontSize="18" FontWeight="Bold"/>
                     <Button x:Name="Exercise_tab_Right_button" Content="&gt;" Margin="717,189,83,154" FontSize="18" FontWeight="Bold"/>
+                    <TextBlock x:Name="Log_Out_Text_Block" HorizontalAlignment="Left" Margin="10,105,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold">
+                        <Hyperlink Click="Hyperlink_Click">Log out</Hyperlink>
+                    </TextBlock>
                 </Grid>
             </TabItem>
             <TabItem Header="Nutrition">
