--- a/TrackFit/TrackFit Project/App.xaml
+++ b/TrackFit/TrackFit Project/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="TrackFit_Project.App"
+﻿<Application x:Name="TrackFit_App" x:Class="TrackFit_Project.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="Login Page.xaml">
