more work on exercises xml
added more exercises

--- a/TrackFit/TrackFit Project/Profile Page.xaml
+++ b/TrackFit/TrackFit Project/Profile Page.xaml
@@ -12,9 +12,6 @@
     <Grid>
         <Button Content="Exit Profile Settings" HorizontalAlignment="Left" Margin="22,24,0,0" VerticalAlignment="Top" Width="124" Click="exitProfilePage">
         </Button>
-    <StackPanel HorizontalAlignment="Stretch"
-                
-                VerticalAlignment="Stretch"
-                />
+    <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
   </Grid>
 </Page>
