--- a/TrackFit/TrackFit Project/Profile Page.xaml
+++ b/TrackFit/TrackFit Project/Profile Page.xaml
@@ -1,17 +1,41 @@
 ﻿<Page x:Class="TrackFit_Project.Profile_Page"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:TrackFit_Project"
-      mc:Ignorable="d" 
-      d:DesignHeight="453.635" d:DesignWidth="855.207"
-      Title="Profile_Page" Foreground="#FFE5E5E5" Background="#FFE5E5E5"
-      ShowsNavigationUI = "false" >
+      mc:Ignorable="d"
+      d:DesignHeight="453.635"
+      d:DesignWidth="855.207"
+      Title="Profile_Page"
+      Foreground="#FFE5E5E5"
+      Background="#FFE5E5E5"
+      ShowsNavigationUI="false">
 
-    <Grid>
-        <Button Content="Exit Profile Settings" HorizontalAlignment="Left" Margin="22,24,0,0" VerticalAlignment="Top" Width="124" Click="exitProfilePage">
-        </Button>
-    <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+  <Grid>
+    <TabControl Margin="10,10,10.333,10.333">
+      <TabItem Header="Exercise">
+        <Grid Background="#FFE5E5E5">
+          <Button Content="Exit Profile Settings"
+                  HorizontalAlignment="Left"
+                  Margin="22,24,0,0"
+                  VerticalAlignment="Top"
+                  Width="124"
+                  Click="exitProfilePage">
+          </Button>
+        </Grid>
+      </TabItem>
+      <TabItem Header="Nutrition">
+        <Grid Background="#FFE5E5E5">
+          <Button Content="Exit Profile Settings"
+                  HorizontalAlignment="Left"
+                  Margin="22,24,0,0"
+                  VerticalAlignment="Top"
+                  Width="124"
+                  Click="exitProfilePage">
+          </Button>
+        </Grid>
+      </TabItem>
+    </TabControl>
   </Grid>
 </Page>
