--- a/TrackFit/TrackFit Project/Profile Page.xaml
+++ b/TrackFit/TrackFit Project/Profile Page.xaml
@@ -101,7 +101,7 @@
              Margin="162,81,0,0"
              VerticalAlignment="Top"
              Width="108"
-             Source="Images/FB_IMG_1449943028849.jpg" />
+             Source="Images/ImaniBB.jpg" />
 
     </Grid>
   </Border>
