--- a/TrackFit/TrackFit Project/Profile Page.xaml
+++ b/TrackFit/TrackFit Project/Profile Page.xaml
@@ -7,7 +7,7 @@
       mc:Ignorable="d"
       d:DesignHeight="453.635"
       d:DesignWidth="855.207"
-      WindowTitle="Page Title"
+      WindowTitle="Profile_Page"
       Title="Profile_Page"
       Foreground="#FFE5E5E5"
       Background="#FFE5E5E5"
@@ -39,11 +39,13 @@
             </StackPanel>
           </Grid>
         </TabItem>
-        <TabItem Header="Nutrition">
+        <TabItem Header="Nutrition"
+                 HorizontalAlignment="Left"
+                 Width="64">
           <Grid Background="#FFE5E5E5">
             <Button Content="Exit Profile Settings"
                     HorizontalAlignment="Left"
-                    Margin="10,356,0,0"
+                    Margin="20,342,0,0"
                     VerticalAlignment="Top"
                     Width="124"
                     Click="exitProfilePage">
@@ -66,7 +68,7 @@
           <Grid Background="#FFE5E5E5">
             <Button Content="Exit Profile Settings"
                     HorizontalAlignment="Left"
-                    Margin="10,356,0,0"
+                    Margin="20,342,0,0"
                     VerticalAlignment="Top"
                     Width="124"
                     Click="exitProfilePage" />
@@ -84,7 +86,7 @@
           </Grid>
         </TabItem>
       </TabControl>
-      <Label Content="TrackFit"
+      <Label Content="Profile"
              HorizontalAlignment="Left"
              Margin="21,10,0,0"
              VerticalAlignment="Top"
@@ -94,15 +96,15 @@
              RenderTransformOrigin="-0.098,0.377"
              FontWeight="Bold"
              FontStyle="Italic" />
+      <Image HorizontalAlignment="Left"
+             Height="106"
+             Margin="21,82,0,0"
+             VerticalAlignment="Top"
+             Width="101"
+             RenderTransformOrigin="-0.14,-0.148"
+             Source="KiKi.jpg" />
 
       <!--Image -->
-      <Image HorizontalAlignment="Left"
-             Height="121"
-             Margin="162,81,0,0"
-             VerticalAlignment="Top"
-             Width="108"
-             Source="Images/ImaniBB.jpg" />
-
     </Grid>
   </Border>
 
