fixed some window sizing issues
fixed!

--- a/TrackFit/TrackFit Project/Profile Page.xaml
+++ b/TrackFit/TrackFit Project/Profile Page.xaml
@@ -5,8 +5,8 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:TrackFit_Project"
       mc:Ignorable="d"
-      d:DesignHeight="453.635"
-      d:DesignWidth="855.207"
+      d:DesignHeight="453.635" d:DesignWidth="855.207"
+      MinHeight="453.635" MinWidth="855.207"
       WindowTitle="Page Title"
       Title="Profile_Page"
       Foreground="#FFE5E5E5"
