--- a/TrackFit/TrackFit Project/Main Page.xaml
+++ b/TrackFit/TrackFit Project/Main Page.xaml
@@ -6,6 +6,7 @@
       xmlns:local="clr-namespace:TrackFit_Project"
       mc:Ignorable="d" 
       d:DesignHeight="453.635" d:DesignWidth="855.207"
+      MinHeight="453.635" MinWidth="855.207"
       WindowTitle="TrackFit"
       Title="Main_Page"
       ShowsNavigationUI = "false" >
