--- a/TrackFit/TrackFit Project/Profile Page.xaml
+++ b/TrackFit/TrackFit Project/Profile Page.xaml
@@ -94,45 +94,65 @@
                 <!-- Column 1 -->
                 <StackPanel Grid.Column="0"
                             Margin="0 0 10 0">
-                  <CheckBox Checked="Checkbox_Checked" x:Name="CheckBox1" Content="Meal Item 1" />
-                  <CheckBox Checked="Checkbox_Checked" x:Name="CheckBox2" Content="Meal Item 2" />
-                  <CheckBox Checked="Checkbox_Checked" x:Name="CheckBox3" Content="Meal Item 3" />
-                  <CheckBox Checked="Checkbox_Checked" x:Name="CheckBox4" Content="Meal Item 4" />
+                  <CheckBox Checked="Checkbox_Checked"
+                            x:Name="CheckBox1"
+                            Content="Meal Item 1" />
+                  <CheckBox Checked="Checkbox_Checked"
+                            x:Name="CheckBox2"
+                            Content="Meal Item 2" />
+                  <CheckBox Checked="Checkbox_Checked"
+                            x:Name="CheckBox3"
+                            Content="Meal Item 3" />
+                  <CheckBox Checked="Checkbox_Checked"
+                            x:Name="CheckBox4"
+                            Content="Meal Item 4" />
                 </StackPanel>
 
                 <!-- Column 2 -->
                 <StackPanel Grid.Column="1"
                             Margin="0 0 10 0">
-                  <CheckBox Checked="Checkbox_Checked" x:Name="CheckBox5" Content="Meal Item 5" />
-                  <CheckBox Checked="Checkbox_Checked" x:Name="CheckBox6" Content="Meal Item 6" />
-                  <CheckBox Checked="Checkbox_Checked" x:Name="CheckBox7" Content="Meal Item 7" />
-                  <CheckBox Checked="Checkbox_Checked" x:Name="CheckBox8" Content="Meal Item 8" />
+                  <CheckBox Checked="Checkbox_Checked"
+                            x:Name="CheckBox5"
+                            Content="Meal Item 5" />
+                  <CheckBox Checked="Checkbox_Checked"
+                            x:Name="CheckBox6"
+                            Content="Meal Item 6" />
+                  <CheckBox Checked="Checkbox_Checked"
+                            x:Name="CheckBox7"
+                            Content="Meal Item 7" />
+                  <CheckBox Checked="Checkbox_Checked"
+                            x:Name="CheckBox8"
+                            Content="Meal Item 8" />
                 </StackPanel>
-                
+
                 <!--Menu Items Function Buttons-->
                 <Grid>
                   <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                   </Grid.ColumnDefinitions>
-                  
+
                   <!-- Reset Tab-->
                   <Button x:Name="ResetBtn"
-                          Click="ResetBtn_Click" Margin="5 75 10 25" Grid.Column="0"
+                          Click="ResetBtn_Click"
+                          Margin="5 75 10 25"
+                          Grid.Column="0"
                           Content="Reset"
                           FontWeight="Bold">
                   </Button>
 
                   <!-- Build Plan Items Tab-->
                   <Button x:Name="CreateBtn"
-                          Click="CreateBtn_Click" Margin="0 75 25 25" Grid.Column="1"
-                          Content="Create Plan"                          
+                          Click="CreateBtn_Click"
+                          Margin="0 75 25 25"
+                          Grid.Column="1"
+                          Content="Create Plan"
                           FontWeight="Bold">
                   </Button>
                 </Grid>
-                
+
               </Grid>
-              
+
               <!-- -->
 
             </StackPanel>
@@ -172,7 +192,9 @@
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
                   </Grid.RowDefinitions>
-                  <Button x:Name="WeightChart" Click="WeightChart_Click" Margin="3"
+                  <Button x:Name="WeightChart"
+                          Click="WeightChart_Click"
+                          Margin="3"
                           Grid.Row="0">Weight Chart Here</Button>
                   <Button Margin="3"
                           Grid.Row="1">Exercise Chart Here</Button>
@@ -195,7 +217,9 @@
 
                   <Button Grid.Row="0"
                           Margin="3">Fat % Chart Here</Button>
-                  <Button x:Name="BMIChart" Click="BMIChart_Click" Grid.Row="2"
+                  <Button x:Name="BMIChart"
+                          Click="BMIChart_Click"
+                          Grid.Row="2"
                           Margin="3">BMI/BMR Chart Here</Button>
 
                   <!-- Horizontal Splitter that subdivides it into a top and bottom region-->
@@ -209,6 +233,12 @@
                 </Grid>
               </Grid>
             </StackPanel>
+            <Image x:Name="imageChart"
+                   HorizontalAlignment="Left"
+                   Height="183"
+                   Margin="251,135,0,0"
+                   VerticalAlignment="Top"
+                   Width="247" />
           </Grid>
         </TabItem>
       </TabControl>
