--- a/TrackFit/TrackFit Project/Main Page.xaml
+++ b/TrackFit/TrackFit Project/Main Page.xaml
@@ -30,8 +30,9 @@
                     <Button x:Name="Exercise_tab_left_button" Content="&lt;" Margin="11" VerticalAlignment="Center" HorizontalAlignment="Left" Width="20" Height="50" FontSize="18" FontWeight="Bold" Click="Exercise_tab_left_button_Click"/>
                     <Button x:Name="Exercise_tab_Right_button" Content="&gt;" Margin="11" VerticalAlignment="Center" HorizontalAlignment="Right" Width="20" Height="50" FontSize="18" FontWeight="Bold" Click="Exercise_tab_Right_button_Click"/>
                     <Label x:Name="Day_of_the_Week_Label" Content="Label" HorizontalAlignment="Left" Margin="297,10,0,0" VerticalAlignment="Top" Height="40" Width="167" FontFamily="Tahoma" FontSize="24" FontWeight="Bold"/>
+                    <Label x:Name="Welcome_Banner" Content="Label" HorizontalAlignment="Left" Margin="-138,52,0,0" VerticalAlignment="Top" Height="21" Width="81" FontFamily="Tahoma" FontSize="8" FontWeight="Bold"/>
                 </Grid>
-                <TextBlock x:Name="Log_Out_Text_Block" HorizontalAlignment="Left" Margin="10,105,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold">
+                <TextBlock x:Name="Log_Out_Text_Block" HorizontalAlignment="Left" Margin="4,117,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold">
                         <Hyperlink x:Name="Log_out_hyperlink" Click="Log_out_hyperlink_Click">Log out</Hyperlink>
                 </TextBlock>
             </Grid>
