--- a/TrackFit/TrackFit Project/Create Account Page.xaml
+++ b/TrackFit/TrackFit Project/Create Account Page.xaml
@@ -8,7 +8,8 @@
       d:DesignHeight="453.635" d:DesignWidth="855.207"
       MinHeight="453.635" MinWidth="855.207"
       WindowTitle="TrackFit"
-      Title="Create_Account_Page">
+      Title="Create_Account_Page"
+      ShowsNavigationUI = "false" >
 
     <Grid Background="#FFE5E5E5" >
         <TextBlock TextWrapping="Wrap" Text="Create a TrackFit Account" FontSize="20" FontStyle="Italic" FontWeight="Bold" Margin="10,10,535.2,416.6" FontFamily="Tahoma" Width="310" Height="27" />
@@ -24,11 +25,11 @@
         <TextBlock TextWrapping="Wrap" Text="Exercise Information:" FontSize="8" FontStyle="Italic" FontWeight="Bold" Margin="370,53,393.2,389.6" FontFamily="Tahoma" Width="92" Height="11" />
         <TextBlock TextWrapping="Wrap" Text="Personal Information:" FontSize="8" FontStyle="Italic" FontWeight="Bold" Margin="52,205,711.2,237.6" FontFamily="Tahoma" Width="92" Height="11" />
         <TextBox x:Name="Age_Text_Box" TextWrapping="Wrap" Height="23" Margin="104,231,689.2,199.6" Width="62"/>
-        <TextBlock x:Name="Age_Label" Margin="52,231,776.2,206.6" TextWrapping="Wrap" Text="Age:" Height="16"/>
+        <TextBlock x:Name="Age_Label" Margin="52,231,776.2,206.6" TextWrapping="Wrap" Text="Age:" Height="16" Width="27"/>
         <TextBox x:Name="Weight_Text_Box" TextWrapping="Wrap" Height="23" Margin="104,269,689.2,161.6" Width="62"/>
-        <TextBlock x:Name="Weight_Label" Margin="52,269,759.2,168.6" TextWrapping="Wrap" Text="Weight:" Height="16"/>
+        <TextBlock x:Name="Weight_Label" Margin="52,269,759.2,168.6" TextWrapping="Wrap" Text="Weight:" Height="16" Width="44"/>
         <TextBox x:Name="Height_Text_Box" TextWrapping="Wrap" Height="23" Margin="104,306,689.2,124.6" Width="62"/>
-        <TextBlock x:Name="Height_Label" Margin="52,306,759.2,131.6" TextWrapping="Wrap" Text="Height:" Height="16"/>
+        <TextBlock x:Name="Height_Label" Margin="52,306,759.2,131.6" TextWrapping="Wrap" Text="Height:" Height="16" Width="44"/>
         <TextBlock x:Name="Inches_text" Margin="52,321,765.2,116.6" TextWrapping="Wrap" Text="*in inches" Height="16" FontSize="8" FontFamily="Tahoma" Width="38"/>
         <Button x:Name="Create_Account_Button" Content="Create" Height="20" Width="86" Margin="619,397,150.2,36.6" Click="Create_Button_Click"/>
         <Button x:Name="Cancel_Create_Account_Button" Content="Cancel"  Height="20" Width="86" Margin="710,397,59.2,36.6" Click="Cancel_Button_Click"/>
